5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1594_2425.log
== SUBMITION (2019-03-30 20:27:18) 
-- CODE:
d = float(input("D: "))
c = float(input("C: "))

r = d/c

print(round(r,3))
-- EXECUTION TIME:
0.114914
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:27:23) 
-- CODE:
d = float(input("D: "))
c = float(input("C: "))

r = d/c

print(round(r,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:27:55) 
-- CODE:
d = float(input("D: "))
c = float(input("C: "))

r = d/c

print(round(r."km/l",3))
-- EXECUTION TIME:
0.145371
-- ERROR:
  File "/home/codebench/codes/1594/2425/main.py", line 6
    print(round(r."km/l",3))
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:27:57) 
-- CODE:
d = float(input("D: "))
c = float(input("C: "))

r = d/c

print(round(r."km/l",3))
-- ERROR:
File "XXXX", line 6
    print(round(r."km/l",3))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:28:19) 
-- CODE:
d = float(input("D: "))
c = float(input("C: "))

r = d/c

print(round(r+"km/l",3))
-- EXECUTION TIME:
0.12591
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 6, in <module>
    print(round(r+"km/l",3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:28:21) 
-- CODE:
d = float(input("D: "))
c = float(input("C: "))

r = d/c

print(round(r+"km/l",3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(r+"km/l",3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:28:49) 
-- CODE:
d = float(input("D: "))
c = float(input("C: "))

r = d/c

print(round(r,3)"km/l")
-- EXECUTION TIME:
0.142365
-- ERROR:
  File "/home/codebench/codes/1594/2425/main.py", line 6
    print(round(r,3)"km/l")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:28:52) 
-- CODE:
d = float(input("D: "))
c = float(input("C: "))

r = d/c

print(round(r,3)"km/l")
-- ERROR:
File "XXXX", line 6
    print(round(r,3)"km/l")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:29:01) 
-- CODE:
d = float(input("D: "))
c = float(input("C: "))

r = d/c

print(round(r,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:29:12) 
-- CODE:
d = float(input("D: "))
c = float(input("C: "))

r = d/c

print(round(r,3),"km/l")
-- EXECUTION TIME:
0.141453
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
